<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:minHeight="140dp">

    <TextView
            android:id="@+id/tv_title_sign_out_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/dialog_sign_out_message_text"
            android:textColor="@color/dialog_color_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/button_positive_sign_out_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/dialog_pos_button_text"
            android:textAllCaps="true"
            android:textColor="@color/dialog_color_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginTop="38dp" />

    <TextView
            android:id="@+id/button_negative_sign_out_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/dialog_neg_button_text"
            android:textAllCaps="true"
            android:textColor="@color/dialog_color_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/button_positive_sign_out_dialog"
            app:layout_constraintEnd_toStartOf="@id/button_positive_sign_out_dialog"
            app:layout_constraintTop_toTopOf="@id/button_positive_sign_out_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>