<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".presentation.screens.auth.AuthFragment">

    <TextView
            android:id="@+id/tv_title_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="14dp"
            android:text="@string/auth_title_text"
            android:textAppearance="@style/Text.MontserratSemiBold.24.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_inp_layout_login"
            style="@style/DefaultTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/login_hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_auth"
            app:prefixText="+7 ("
            app:prefixTextAppearance="@style/Text.MontserratMedium.16"
            app:prefixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login"
                style="@style/DefaultTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:drawablePadding="-2dp"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@id/txt_inp_layout_password"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                tools:text="999) 123 45 67" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_inp_layout_password"
            style="@style/DefaultTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:hint="@string/password_hint_text"
            app:endIconDrawable="@drawable/ic_show_password"
            app:endIconMode="custom"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/txt_inp_layout_login"
            app:layout_constraintStart_toStartOf="@id/txt_inp_layout_login"
            app:layout_constraintTop_toBottomOf="@id/txt_inp_layout_login">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                style="@style/DefaultTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="255"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                tools:text="qwerty" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_surf_edu_auth"
            app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_inp_layout_password" />

    <ProgressBar
            android:id="@+id/progress_bar_sign_in_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:elevation="3dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/button_sign_in"
            app:layout_constraintEnd_toEndOf="@id/button_sign_in"
            app:layout_constraintStart_toStartOf="@id/button_sign_in"
            app:layout_constraintTop_toTopOf="@id/button_sign_in" />

    <Button
            android:id="@+id/button_sign_in"
            style="@style/Widget.ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_sign_in_text"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
            android:id="@+id/interface_blocker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="true"
            android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>