<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.tabs.profile.ProfileTabFragment">

    <TextView
            android:id="@+id/tv_title_profile"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="23dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_profile"
            tools:background="@android:color/darker_gray" />

    <TextView
            android:id="@+id/tv_first_name"
            style="@style/ProfileMainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_profile"
            tools:text="Александра" />

    <TextView
            android:id="@+id/tv_second_name"
            style="@style/ProfileMainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Новикова" />

    <TextView
            android:id="@+id/tv_about"
            style="@style/ProfileSecondText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat_light_italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_profile"
            tools:text="“Светлое будущее живет в вечности”" />

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="161dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title_profile">

        <TextView
                style="@style/ProfileSecondText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/profile_city_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_profile" />

        <TextView
                android:id="@+id/tv_city"
                style="@style/ProfileMainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_profile"
                tools:text="Санкт-Петербург" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="233dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title_profile">

        <TextView
                style="@style/ProfileSecondText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/profile_phone_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_profile" />

        <TextView
                android:id="@+id/tv_phone"
                style="@style/ProfileMainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_profile"
                tools:text="+ 7 (961) 187 17 44" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="305dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title_profile">

        <TextView
                style="@style/ProfileSecondText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/profile_email_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_profile" />

        <TextView
                android:id="@+id/tv_email"
                style="@style/ProfileMainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_profile"
                tools:text="alexandra@surfstudio.ru" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
            android:id="@+id/tv_profile_error_snack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/snack_error_background_color"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/sign_out_error_text"
            android:textColor="@color/snack_error_text_color"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/button_sign_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
            android:id="@+id/progress_bar_sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar_custom"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/button_sign_out"
            app:layout_constraintEnd_toEndOf="@id/button_sign_out"
            app:layout_constraintStart_toStartOf="@id/button_sign_out"
            app:layout_constraintTop_toTopOf="@id/button_sign_out" />

    <Button
            android:id="@+id/button_sign_out"
            style="@style/Widget.SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="19dp"
            android:paddingTop="11dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:text="@string/button_sign_out_text"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>