<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.auth.SignInFragment">

    <TextView
            android:id="@+id/tv_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="14dp"
            android:text="@string/auth_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/login_hint_text"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="16sp"
            app:boxBackgroundColor="@color/edit_text_box_background_color"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edit_text_bottom_stroke_color"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/edit_text_hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:prefixText="+7">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:imeOptions="actionDone|actionNext"
                android:inputType="phone"
                android:maxLength="16"
                android:paddingStart="18dp"
                android:paddingTop="18dp"
                android:paddingEnd="18dp"
                android:paddingBottom="17dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/password_hint_text"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="16sp"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/ic_show_hide_password_icon"
            app:boxBackgroundColor="@color/edit_text_box_background_color"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edit_text_bottom_stroke_color"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/edit_text_hint_color"
            app:layout_constraintEnd_toEndOf="@id/text_input_layout_login"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_login"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_login">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="255"
                android:paddingStart="18dp"
                android:paddingTop="18dp"
                android:paddingEnd="18dp"
                android:paddingBottom="17dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/content_description_surf_edu_logo_sign_in"
            android:src="@drawable/ic_surf_edu_auth"
            app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

    <Button
            android:id="@+id/button_sign_in"
            style="@style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="19dp"
            android:paddingTop="11dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:text="@string/button_sign_in_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>